--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,11 +58,11 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
     implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
     implementation 'androidx.compose.material:material:1.0.5'
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
-
 
 
     testImplementation 'junit:junit:4.13.2'
